examples/type_system/failing/81_match_bool_missing_false.flx
// E015: Bool match missing false branch.
let b = true;

match b {
    true -> 1
};
